--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,122 @@
 /* body */
 body {
   font-family: Roboto, "sans-serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #2e2f42;
 }
+
+ul li {
+  list-style-type: none;
+}
+
 /* nav */
+.logo {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
+.logo-span {
+  color: #2e2f42;
+}
+
+.link-list {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 40px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 /* address */
+.adress-list {
+  letter-spacing: 0.02em;
+  color: #434455;
+  font-style: normal;
+}
+
 /* main */
+
 /* section_button */
-/* section_image1 */
-/* section_image2 */
-/* section_image3 */
+.buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 24px;
+}
+
+/* sections */
+.name-images {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+}
+
+.info-images {
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
 /* footer */
+.footer-portfolio {
+  background: #2e2f42;
+}
+
+.logo-footer {
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+  align-items: flex-start;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
+.logo-footer-span {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.footer-info {
+  letter-spacing: 0.02em;
+  color: #e7e9fc;
+}
