--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* body */
 body {
-  font-family: Roboto, "sans-serif";
+  font-family: “Roboto”, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
