--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* body */
 body {
-  font-family: “Roboto”, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -55,25 +55,40 @@ ul li {
 
 /* main */
 
-/* section_button */
-.buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 24px;
+/* button_in_the_section */
+.list {
+  list-style: none;
 }
 
-/* sections */
+.all-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  cursor: pointer;
+}
+
+/* section */
+.link {
+  text-decoration: none;
+}
+
+
+
 .name-images {
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
+
 }
 
 .info-images {
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
