--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+:root {
+  --colorbody-portfolio: #434455;
+  --brand-color: #f4f4fd;
+  --backgroundstudio: #2e2f42;
+  --Third-title: #2e2f42;
+  --name-team-var: #2e2f42;
+}
+
 /* body */
 body {
   font-family: "Roboto", sans-serif;
@@ -16,11 +24,8 @@ ul li {
   color: #434455;
 }
 
-:root{
-  --colorbody-portfolio:#434455;
-}
-
-.body-portfolio::before {
+/* Color-body-VAR */
+.body-portfolio {
   color: var(--colorbody-portfolio);
 }
 
@@ -38,7 +43,6 @@ ul li {
 .logo-span {
   color: #2e2f42;
 }
-
 
 .link-list {
   font-weight: 500;
@@ -72,17 +76,12 @@ ul li {
 
 /* main */
 
-/* button_in_the_section */
+/* First-list-buttons */
 .list {
   list-style: none;
 }
 
-:root {
-  --brand-color::#F4F4FD;
-}
-
-
-.all-button::before{
+.all-button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -90,25 +89,26 @@ ul li {
   letter-spacing: 0.04em;
   color: #4d5ae5;
   cursor: pointer;
+}
+
+/* portfolio-button-VAR */
+.all-button {
   background-color: var(--brand-color);
 }
 
 .all-button:hover,
 .all-button:focus {
-  color: #FFFFFF;
-  background-color: #404BBF;
+  color: #ffffff;
+  background-color: #404bbf;
 }
 
 /* Button-Section */
-:root {
-  --backgroundstudio:#2e2f42;
-}
-
-.button-section::before{
+/* Studio-button-VAR */
+.button-section {
   background-color: var(--backgroundstudio);
 }
 
-.site-title{
+.site-title {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
@@ -116,8 +116,8 @@ ul li {
   color: #ffffff;
 }
 
-.button-studio{
-  background-color: #4D5AE5;
+.button-studio {
+  background-color: #4d5ae5;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -128,65 +128,57 @@ ul li {
 }
 
 .button-studio:hover,
-.button-studio:focus{
-  color: #404BBF;
+.button-studio:focus {
+  color: #404bbf;
 }
 /* First-Section */
-.text-section{
+.text-section {
   letter-spacing: 0.02em;
   font-size: 16px;
 }
 
-.header-first-section{
+.header-first-section {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color:#2e2f42;
+  color: #2e2f42;
 }
 /* Second-Section */
-.second-header{
+.second-header {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color:#2e2f42;
+  color: #2e2f42;
 }
 
 /* Thrid-Section */
 
-.our-team-section{
-  background-color: #F4F4FD;
+.our-team-section {
+  background-color: #f4f4fd;
 }
-
-.title-thrid-section{
+/* Studio-Third-section-VAR */
+.title-thrid-section {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color:var (--Third-title);
+  color: var (--Third-title);
 }
 
-:root{
-  --Third-title:#2e2f42;
+.team-list {
+  background-color: #ffffff;
 }
-
-.team-list{
-  background-color: #FFFFFF;
-}
-
-.name-team{
+/* Studio-NameTeam-VAR */
+.name-team {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--name-team-var);
-}
-
-:root{
-  --name-team-var:#2e2f42;
 }
 
 /* section portfolio */
